# rag-workshop

./: .env.sample  README.md  pyproject.toml
step1_retrieval/exercise_1/: conftest.py  simple_retrieval_exercise.py  test_retrieval.py
step1_retrieval/exercise_2/: conftest.py  embedding_retrieval_exercise.py  test_retrieval.py
step2_generation/exercise_1/: simple_rag_exercise.py
step2_generation/exercise_2/: agentic_rag_exercise.py  conftest.py
